2010-03-10  Adam Fedor  <fedor@mallory>

	* Source/NSURLProtocol.m ([_NSHTTPURLProtocol -stream:stream:event]): 
	Add default Content-Type to POST methods if none is present.

2010-03-09  Adam Fedor  <fedor@gnu.org>

	* Source/NSHTTPCookie.m: Finish off implementation
	* Source/HSHTTPCookieStorage.m: Finish off implementation.

2010-03-10 Riccardo Mottola <rmottola@users.sf.net>

	* /Source/ObjectiveC2/sync.m : use proper _XOPEN_SOURCE
	instead of __USE_UNIX98 to enable needed thread features on glibc

2010-03-08 Roland Schwingel <roland.schwingel@onevision.de>

	* Source/NSFileManager.m: implement fileSystemNumber for mswindows.

2010-03-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m:
	* Source/Additions/GSObjCRuntime.m:
	* Documentation/Base.gsdoc:
	* Headers/Additions/GNUstepBase/GSObjCRuntime.h:
	Add GNUSTEP_BEHAVIOR_DEBUG enovironment variable to turn on logging
	of the use of behaviors/overrides of class methds by a list of
	methods from another class.

2010-03-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSArray.m: Re-remove [GSMutableArray count] (GSMutableArray
	uses the GSArray implementation).
	* Source/GSDictionary.m:
	* Source/GSCountedSet.m:
	* Source/GSSet.m:
	Add the same sort of NSUInteger fixups that Fred added to GSArray.m
	* Headers/Additions/GNUstepBase/GSUnion.h:
	Add support for NSInteger and NSUInteger (so GSCountedSet can use them).

2010-03-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSArray.m: Re-add [GSMutableArray count]. Change all
	method parameters from int or unsigned to NSUInteger to match
	super classes.

2010-03-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m:
	* Headers/Additions/GNUstepBase/GSObjCRuntime.h:
	Add function to add 'overrides' as a form of programmatically
	controlled category similar to behaviors, giving an app control
	over the order in which methods are added to a class.

2010-03-05 Richard Frith-Macdonald <rfm@gnu.org>
