@@ -26,7 +26,13 @@
 // This file uses some SUS'98 extensions, so we need to tell glibc not to hide
 // them.  Other platforms have more sensible libcs, which just default to being
 // standards-compliant.
-#define _XOPEN_SOURCE 500
+#if defined __linux__ || defined __hurd__
+#  ifndef _XOPEN_SOURCE
+#    define _XOPEN_SOURCE 600
+#  endif
+#endif
+
+
 #include <pthread.h>
 #import "GNUstepBase/GSConfig.h"
 #define	gs_cond_t	pthread_cond_t
