@@ -10,7 +10,9 @@
 
 2010-03-10 Riccardo Mottola <rmottola@users.sf.net>
 
-	* /Source/ObjectiveC2/sync.m : use proper _XOPEN_SOURCE
+	* /Source/ObjectiveC2/sync.m,
+	* /Source/NSZone.h,
+	* /Source/GSPThread.h : use proper _XOPEN_SOURCE
 	instead of __USE_UNIX98 to enable needed thread features on glibc
 
 2010-03-08 Roland Schwingel <roland.schwingel@onevision.de>
